# stelo

./: LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/screenshots/: README.md
isolation/: index.html  index.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  commands.rs  credentials.rs  forward.rs  known_hosts.rs  lib.rs  main.rs  metrics.rs  sessions_store.rs  sftp.rs  smoke_tests.rs  ssh.rs  task_cancel.rs
src/components/: AiManagerDialog.tsx  AiPanel.tsx  CommandPalette.tsx  ConfigBackupDialog.tsx  ConfirmDialog.tsx  ConnectingView.tsx  CwdPanel.tsx  DialogHost.tsx  EditSessionDialog.tsx  FileEditor.tsx  GroupManagerDialog.tsx  GroupSelect.tsx  HostKeyMismatchDialog.tsx  ImagePreview.tsx  InputDialog.tsx  KeyManagerDialog.tsx  KnownHostsDialog.tsx  LangMenu.tsx  NewSessionDialog.tsx  OfficePreview.tsx  ReconnectPanel.tsx  ShortcutsDialog.tsx  Sidebar.tsx  SnippetManagerDialog.tsx  StatusBar.tsx  SudoPasswordDialog.tsx  TabBar.tsx  TerminalView.tsx  ThemeEditor.tsx  ThemeMenu.tsx  UploadDialog.tsx
src/i18n/: en.ts  index.ts  types.ts  zh.ts
src/lib/: agent.test.ts  agent.ts  ai.test.ts  ai.ts  autoConnect.ts  dialog.ts  forwards.ts  persistence.ts  redact.test.ts  redact.ts  snippets.ts  sshConnect.ts  sshErrors.ts  storage.ts  sudoCache.ts  themes.ts  useDialogEscape.ts  utils.ts
src/stores/: aiProviders.ts  groups.ts  history.ts  (+5 more)
(+5 files in other folders)
