[package]
name = "hypershell"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hypershell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "isolation"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

russh = "0.51"
russh-sftp = "2"
base64 = "0.22"
async-trait = "0.1"
dirs = "5"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
once_cell = "1"

# 凭据本地加密：AES-256-GCM + Argon2id (master_salt + 机器派生 IKM)
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"  # 仅用于读取 v2 旧格式做迁移
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
tempfile = "3"

